feat: add JavaFX window skeleton